# igaming-player-elt-pipeline

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/igaming_elt/: config.py  db.py  events.py  ingest_async.py  run_ingest.py  run_spark.py
src/igaming_elt/quality/: checks.py
src/igaming_elt/spark_jobs/: transforms.py
src/igaming_elt/warehouse/: bigquery_loader.py
tests/: test_events.py  test_ingest.py  test_quality_and_spark.py
