[project]
name = "igaming-player-elt-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
  "psycopg>=3.1.0",
  "pytest>=8.0.0",
  "pyspark>=3.5.0",
  "tenacity>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
